--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "jsvue",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Jesse Sosmena <diximobureros@gmail.com>",
+  "author": "Jesse Jay",
   "private": true,
   "scripts": {
+    "start": "node server.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-vue": "^1.2.0",
-    "express": "^4.16.2",
+    "express": "^4.16.4",
     "sweetalert": "^2.0.8",
     "vee-validate": "^2.0.0-rc.12",
     "vue": "^2.3.3",
@@ -42,9 +43,11 @@
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
+    "vue-gh-pages": "^1.19.0",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^2.4.5"
   }
 }
